dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.5)

dnl Some handy macros
define([THE_PACKAGE_NAME],    [moot])
define([THE_PACKAGE_VERSION], [1.0.4])
define([THE_PACKAGE_AUTHOR],  [moocow@ling.uni-potsdam.de])

AC_INIT(THE_PACKAGE_NAME, THE_PACKAGE_VERSION, THE_PACKAGE_AUTHOR)

dnl source && aux dir
AC_CONFIG_AUX_DIR(config)

dnl canonical target (sets $target, $target_(cpu|vendor|os) : used for bindist)
AC_CANONICAL_TARGET

dnl use automake
AM_INIT_AUTOMAKE(THE_PACKAGE_NAME, THE_PACKAGE_VERSION)

dnl use autoheader
AM_CONFIG_HEADER([src/libmoot/mootConfig.h])

dnl default prefix
AC_PREFIX_DEFAULT(/usr/local)

#-------------------------------------------------------------
# save user's *FLAGS
#USER_LIBS="$LIBS"
#USER_LDFLAGS="$LDFLAGS"
#USER_CPPFLAGS="$CPPFLAGS"
USER_CXXFLAGS="$CXXFLAGS"

dnl
dnl check for programs
dnl
AC_PROG_CC
AC_PROG_CXX
AC_LANG(C++)

dnl v--- needed if Makefile.am uses _LTLIBRARIES targets
AC_PROG_LIBTOOL

dnl v--- for static-only libraries (non-libtool)
dnl AC_PROG_RANLIB

dnl v--- needed if Makefile.am uses lex sources
dnl AM_PROG_LEX


### --- unmangle user's CXXFLAGS
if test "$CXXFLAGS" != "$USER_CXXFLAGS" ; then
  # autoconf likes to set this... who knows why...
  AC_MSG_NOTICE([Restoring user's original CXXFLAGS value])
  CXXFLAGS="$USER_CXXFLAGS"
fi

#---------------------------------------------------------------
# short package includes
spkgincludedir="\${includedir}/AC_PACKAGE_NAME"
AC_SUBST(spkgincludedir)
# short package includes
#---------------------------------------------------------------

#---------------------------------------------------------------
# get real prefix
AC_CACHE_CHECK([for installation prefix], [ac_cv_install_prefix],
	[if test "$prefix" = "NONE" ; then
	   ac_cv_install_prefix="/usr/local"
	 else
           ac_cv_install_prefix="$prefix"
	 fi
	])
dnl #  ... and add it to our flags
dnl CPPFLAGS="$CPPFLAGS -I${ac_cv_install_prefix}/include"
dnl LDFLAGS="$LDFLAGS -L${ac_cv_install_prefix}/lib"


dnl check for strdup
AC_CHECK_FUNC(strdup,[AC_DEFINE(HAVE_STRDUP,1,[Define this if you have the strdup() function])])


dnl ---------------------------------------------------------------
dnl pkg-config : program
dnl
AC_ARG_VAR(PKG_CONFIG, [How to run the pkg-config program])
AC_ARG_VAR(PKG_CONFIG_PATH, [Directories to search for pkg-config])
if test -z "$PKG_CONFIG" ; then
  AC_PATH_PROG(PKG_CONFIG,pkg-config,[])
fi
dnl pkg-config: destination directory
AC_ARG_WITH(pkgconfig-dir,
	AC_HELP_STRING([--with-pkgconfig-dir=DIR],
		[install pkg-config metafile(s) in DIR (default=LIBDIR/pkgconfig)]),
	[ac_cv_pkgconfigdir="$withval"])
if test -z "$ac_cv_pkgconfigdir" ; then
  ac_cv_pkgconfigdir="\$(libdir)/pkgconfig"
fi
pkgconfigdir="$ac_cv_pkgconfigdir"
AC_SUBST(pkgconfigdir)
dnl
dnl pkg-config
dnl ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



dnl vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
dnl check for time headers (argh)
AC_CHECK_HEADERS([time.h sys/time.h],
	[],
	[AC_MSG_WARN([Required header file not found!])
    	 AC_MSG_WARN([Are the 'struct timeval' and 'time()' headers in your 'CPPFLAGS' environment variable?])
    	 AC_MSG_ERROR([Required headers not found -- aborting.])
	])
dnl time headers
dnl ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


dnl ------------------------------------------------------------
dnl libFSM (user argument + pkg-config)
dnl
AC_ARG_ENABLE(fsm,
	AC_HELP_STRING([--disable-fsm],
		[Disable use of of Thomas Hanneforth's FSMlib (some functionality lost)]),
	[ac_cv_enable_fsm="$enableval"], [ac_cv_enable_fsm="yes"])

if test "$ac_cv_enable_fsm" = "yes" ; then
  PKG_CHECK_MODULES(FSMLIB, libFSM >= 0.1.0.6, [PC_HAVE_LIBFSM=1], [PC_HAVE_LIBFSM=""])
  #CPPFLAGS="$CPPFLAGS `$PKG_CONFIG --cflags-only-I libFSM`"
  #LDFLAGS="$LDFLAGS `$PKG_CONFIG --libs-only-L libFSM`"
  #FSM_LIBS="`$PKG_CONFIG --libs-only-l libFSM`"
  if test -z "$PC_HAVE_LIBFSM" ; then
    ac_cv_enable_fsm="no"
    enable_fsm_errors="$PKG_CONFIG_ERRORS"
  fi
else
  enable_fsm_errors="(disabled by user)"
fi ## test "$ac_cv_enable_fsm" = "yes"

dnl AC_SUBST(FSM_LIBS)

dnl libFSM
dnl ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

# ------------------------------------------------------------
# libFSMext (via pkg-config)
PKG_CHECK_MODULES(FSMEXT, libFSMext >= 0.0.1, [PC_HAVE_LIBFSMEXT=1], [PC_HAVE_LIBFSMEXT=""])

if test "$ac_cv_enable_fsm" = "yes" -a -n "$PC_HAVE_LIBFSMEXT" ; then
  CPPFLAGS="$CPPFLAGS `$PKG_CONFIG --cflags-only-I libFSMext`"
  LDFLAGS="$LDFLAGS `$PKG_CONFIG --libs-only-L libFSMext`"
  FSMEXT_LIBS="`$PKG_CONFIG --libs-only-l libFSMext`"
elif test "$ac_cv_enable_fsm" = "yes" ; then
  ac_cv_enable_fsm="no"
  enable_fsm_errors="$PKG_CONFIG_ERRORS"
fi
AC_SUBST(FSMEXT_LIBS)
dnl libFSMext
dnl ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

dnl ------------------------------------------------------------
dnl libFSM (defines)
if test "$ac_cv_enable_fsm" = "yes" ; then
    AC_DEFINE([HAVE_LIBFSM],1,[Define this to use Thomas Hanneforth's libFSM])
else
    AC_MSG_WARN()
    AC_MSG_WARN()
    AC_MSG_WARN(Use of libFSM disabled -- some functionality will be lost!)
    AC_MSG_WARN(Errors: $enable_fsm_errors)
    AC_MSG_WARN()
    AC_MSG_WARN()
fi ; ## "$ac_cv_enable_fsm" != "yes"

dnl libFSM (defines)
dnl ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


dnl ------------------------------------------------------------
dnl check for flex++bison++
dnl
AC_ARG_VAR(FLEXXX, [Path to Alain Coetmeur's flex++ program.])
AC_ARG_VAR(BISONXX, [Path to Alain Coetmeur's bison++ program.])

PKG_CHECK_MODULES(FBXX, flex++bison++ >= 0.0.5,
	[ac_cv_have_pkg_fbxx="yes"],
	[ac_cv_have_pkg_fbxx="no"])

if test "$ac_cv_have_pkg_fbxx" = "yes"; then
  PATH="$PATH:`$PKG_CONFIG --variable=prefix flex++bison++`/bin"
  export PATH
  ###--- libFSMext should already get us this ---
  #CPPFLAGS="$CPPFLAGS `$PKG_CONFIG --cflags-only-I flex++bison++`"
fi


dnl ------------------------------------------------------------
dnl check for flex++
dnl
if test -z "$FLEXXX" ; then
  if test "$ac_cv_have_pkg_fbxx" = "yes"; then
    FLEXXX="`$PKG_CONFIG --variable=prefix flex++bison++`/bin/flex++"
    test -x "$FLEXXX" || FLEXXX=""
  fi
  if test -z "$FLEXXX" ; then
    AC_PATH_PROG(FLEXXX,[flex++],[])
  fi
  if test -z "$FLEXXX" ; then
    AC_MSG_WARN()
    AC_MSG_WARN([cannot find Alain Coetmeur's flex++!])
    AC_MSG_WARN([Is your FLEXXX environment variable set correctly?])
    AC_MSG_WARN()
    AC_MSG_WARN([Your build might fail!])
  fi
fi


dnl ------------------------------------------------------------
dnl check for bison++
dnl
if test -z "$BISONXX" ; then
  if test "$ac_cv_have_pkg_fbxx" = "yes" ; then
    BISONXX="`$PKG_CONFIG --variable=prefix flex++bison++`/bin/bison++"
    test -x "$BISONXX" || BISONXX=""
  fi
  if test -z "$BISONXX" ; then
    AC_PATH_PROG(BISONXX,[bison++],[])
  fi
  if test -z "$BISONXX" ; then
    AC_MSG_WARN()
    AC_MSG_WARN([cannot find Alain Coetmeur's bison++!])
    AC_MSG_WARN([Is your BISONXX environment variable set correctly?])
    AC_MSG_WARN()
    AC_MSG_WARN([Your build might fail!])
  fi
fi
YACC="$BISONXX"
AC_SUBST(YACC)
AC_SUBST(BISONXX)


dnl ------------------------------------------------------------
dnl check for optgen.perl
dnl
AC_ARG_VAR(OPTGEN_PERL, [Path to the 'optgen.perl' script.])
AC_ARG_WITH([optgen-perl],
	AC_HELP_STRING([--with-optgen-perl=PATH],
		       [Specify location of optgen.perl]),
	[OPTGEN_PERL="$withval"])

if test -z "$OPTGEN_PERL" ; then
  AC_PATH_PROG(OPTGEN_PERL,[optgen.perl],[])
  if test -z "$OPTGEN_PERL" ; then
    AC_MSG_RESULT([not found])
    AC_MSG_WARN([])
    AC_MSG_WARN([cannot find optgen.perl program -- CVS builds will fail!])
    AC_MSG_WARN([])
  fi
fi
AC_SUBST(OPTGEN_PERL)



dnl ------------------------------------------------------------
dnl documentation
dnl
AC_ARG_WITH(docdir,
	AC_HELP_STRING([--with-docdir=DIR],
		[install documentation in DIR/AC_PACKAGE_NAME (default=DATADIR/doc)]),
	[docdir="$withval"],
	[docdir="\${datadir}/doc"])
pkgdocdir="\${docdir}/\${PACKAGE}"
pkgdocprogdir="\${docdir}/\${PACKAGE}/programs"

AC_SUBST(docdir)
AC_SUBST(pkgdocdir)
AC_SUBST(pkgdocprogdir)

AC_ARG_WITH(doc-formats,
	AC_HELP_STRING([--with-doc-formats=LIST],
		       [Build documentation formats in LIST. \
                        Available formats: txt, man, html, dvi, ps, pdf, none.
	                Default='man html']),
	[ac_cv_doc_formats="$withval"])

## -- set default doc formats if unspecified
if test -z "$ac_cv_doc_formats" ; then
  ac_cv_doc_formats="man html"
fi

## -- un-comma-tize the doc-formats
moot_doc_formats=`echo "$ac_cv_doc_formats" | sed 's/\,/ /g'`


AC_ARG_ENABLE(doc,
	AC_HELP_STRING([--enable-doc],[Synonym for --with-doc-formats=none]),
	[enable_doc="$enableval"],[enable_doc="yes"])


AC_MSG_CHECKING([which documentation formats to build])
if test "$enable_doc" != "yes" ; then
 ### disable all docs
 moot_doc_formats="none"
fi
AC_MSG_RESULT($moot_doc_formats)
#echo ">> post RESULT"


if test "$moot_doc_formats" != "none" ; then
  ### docs: prog doxygen
  AC_PATH_PROG(DOXYGEN,doxygen,[])
  AC_SUBST(DOXYGEN)
  AC_SUBST(DOXYGEN_SOURCES)

  ### -- report doxygen-check results
  if test -z "$DOXYGEN" ; then
    AC_MSG_WARN([doxygen not found: library documentation will not be built!]) 
  fi

  ### docs: pod converters
  AC_PATH_PROG(POD2TEXT,pod2text,[])
  AC_PATH_PROG(POD2MAN,pod2man,[])
  AC_PATH_PROG(POD2HTML,pod2html,[])
  AC_PATH_PROG(POD2LATEX,pod2latex,[])
  AC_SUBST(POD2TEXT)
  AC_SUBST(POD2MAN)
  AC_SUBST(POD2HTML)
  AC_SUBST(POD2LATEX)

  ### -- docs: .gog file linkup
  #moot_program_gogs="moot.gog mootpp.gog moot-fstgen.gog moot-pargen.gog"
  moot_program_gogs="mootpp.gog mootrain.gog moothmm.gog mootm.gog moot.gog"
  for g in $moot_program_gogs ; do
    AC_CONFIG_LINKS(doc/programs/${g}:src/programs/${g})  
  done
  AC_SUBST(moot_program_gogs)
  AC_CONFIG_LINKS(doc/programs/acknowledge.pod:src/programs/acknowledge.pod)

  ### -- initialize defaults
  DOC_SUBDIRS=""
  DOC_LATEX_TARGETS=""
  DOXY_WANT_HTML="NO"
  DOXY_WANT_MAN="NO"
  DOXY_WANT_LATEX="NO"

  for fmt in $moot_doc_formats ; do
    case "$fmt" in

      txt)
	if test -n "$POD2TEXT" ; then
	  DOC_PROG_TXT_TARGETS=`echo "$moot_program_gogs" | sed 's/\.gog/\.txt/g'`
	else
	  AC_MSG_WARN(pod2text not found -- program text docs will not be built!)
	fi
	;;

      man)
	if test -n "$DOXYGEN" ; then
	  DOXY_WANT_MAN="YES"
          DOC_MANDIRS="man/man3"
          DOC_MAN3_MANS="man/man3/*"
	fi
	if test -n "$POD2MAN" ; then
	  DOC_PROG_MAN_TARGETS=`echo "$moot_program_gogs" | sed 's/\.gog/\.1/g'`
	else
	  AC_MSG_WARN(pod2man not found -- program manpages will not be built!)
	fi
	;;

      html)
	if test -n "$DOXYGEN" ; then
          DOXY_WANT_HTML="YES"
          DOC_SUBDIRS="$DOC_SUBDIRS html"
	fi
	if test -n "$POD2HTML" ; then
	  DOC_PROG_HTML_TARGETS=`echo "$moot_program_gogs" | sed 's/\.gog/\.html/g'`
	else
	  AC_MSG_WARN(pod2html not found -- program html docs will not be built!)
	fi
	;;

      dvi)
	if test -n "$DOXYGEN" ; then
	  DOXY_WANT_LATEX="YES"
	  DOC_LATEX_TARGETS="${DOC_LATEX_TARGETS} refman.dvi"
	fi
	if test -n "$POD2LATEX" ; then
	  DOC_PROG_DVI_TARGETS=`echo "$moot_program_gogs" | sed 's/\.gog/\.dvi/g'`
	else
	  AC_MSG_WARN(pod2latex not found -- program dvi docs will not be built!)
	fi
	;;

      ps)
	if test -n "$DOXYGEN" ; then
	  DOXY_WANT_LATEX="YES"
	  DOC_LATEX_TARGETS="${DOC_LATEX_TARGETS} refman.ps"
	fi
	if test -n "$POD2LATEX" ; then
	  DOC_PROG_PS_TARGETS=`echo "$moot_program_gogs" | sed 's/\.gog/\.ps/g'`
	else
	  AC_MSG_WARN(pod2latex not found -- program postscript docs will not be built!)
	fi
	;;

      pdf)
	if test -n "$DOXYGEN" ; then
	  DOXY_WANT_LATEX="YES"
    	  DOC_LATEX_TARGETS="${DOC_LATEX_TARGETS} refman.pdf"
	fi
	if test -n "$POD2LATEX" ; then
	  DOC_PROG_PDF_TARGETS=`echo "$moot_program_gogs" | sed 's/\.gog/\.pdf/g'`
	else
	  AC_MSG_WARN(pod2latex not found -- program pdf docs will not be built!)
	fi
	;;

      *)
	AC_MSG_WARN(ignoring unknown documentation format: $fmt)
	;;
    esac; # case "$fmt" in ...
  done; # for fmt in $moot_doc_formats ...

  AC_SUBST(DOXY_WANT_HTML)
  AC_SUBST(DOXY_WANT_MAN)
  AC_SUBST(DOXY_WANT_LATEX)
  AC_SUBST(DOC_SUBDIRS)
  AC_SUBST(DOC_MANDIRS)
  AC_SUBST(DOC_MAN3_MANS)
  AC_SUBST(DOC_LATEX_TARGETS)
  AC_SUBST(POD_DOC_SUFFIXES)

  AC_SUBST(DOC_PROG_TXT_TARGETS)
  AC_SUBST(DOC_PROG_MAN_TARGETS)
  AC_SUBST(DOC_PROG_HTML_TARGETS)
  AC_SUBST(DOC_PROG_DVI_TARGETS)
  AC_SUBST(DOC_PROG_PS_TARGETS)
  AC_SUBST(DOC_PROG_PDF_TARGETS)


  # -- check for tag-files (this needs an overhaul!)
  for ext in FSM FSMext ; do
    extdocdir="`$PKG_CONFIG --variable=pkgdocdir lib${ext}`"
    if test -n "$extdocdir" -a "$extdocdir" != "no" ; then
      if test \
	-d "$extdocdir/$ext" \
	-a \
	-e "$extdocdir/$ext/$ext.tag" -a -d "$extdocdir/$ext/html"
      then DOXY_TAGFILES="$DOXY_TAGFILES $extdocdir/$ext/$ext.tag=$extdocdir/$ext/html"
      fi
    fi
  done 
  AC_SUBST(DOXY_TAGFILES)   
fi; # if "$moot_doc_formats" != "none" ...


#---------------------------------------------------------------
# Binary distribution
BINDIST_RELEASE=1

## -- hack: canonicalize package-name to lower-case (for debian)
BINDIST_PKGNAME=`echo "$PACKAGE" | tr '[[:upper:]]' '[[:lower:]]'`

## -- hack: downgrade ix86 -> i386
case "$target_cpu" in
  i[[3-9]]86)
	BINDIST_CPU=i386
	;;
  *)
	BINDIST_CPU="$target_cpu"
	;;
esac
BINDIST_OS="$target_os"

AC_SUBST(BINDIST_PKGNAME)
AC_SUBST(BINDIST_RELEASE)
AC_SUBST(BINDIST_CPU)
AC_SUBST(BINDIST_OS)
# Binary distribution
#---------------------------------------------------------------

dnl ------------------------------------------------------------
dnl debug ?
dnl
AC_MSG_CHECKING([whether to build debug version])
AC_ARG_ENABLE(debug,
	AC_HELP_STRING([--enable-debug],[build debug version (default=no)]))

if test "$enable_debug" == "yes" ; then
   AC_MSG_RESULT(yes)
   moot_OFLAGS="-g"
else
  AC_MSG_RESULT(no)
  #moot_OFLAGS="-O2"
  #moot_OFLAGS="-O3 -fomit-frame-pointer -funroll-loops -finline-limit-100000"
  moot_OFLAGS="-O3 -fomit-frame-pointer -funroll-loops"
fi
AC_SUBST(moot_OFLAGS)


dnl ---------------------------------------------------------------
dnl cxxflags: template depth
dnl
CXXFLAGS="$CXXFLAGS -ftemplate-depth-24"
dnl
dnl cxxflags: template depth
dnl ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


dnl ------------------------------------------------------------
dnl warnings ?
dnl
AC_MSG_CHECKING([whether to display compiler warnings])
AC_ARG_ENABLE(warnings,
	AC_HELP_STRING([--disable-warnings],[disable compiler warnings (default=no)]))

if test "$enable_warnings" != "no" ; then
   AC_MSG_RESULT(yes)
   moot_WFLAGS="-Wall"
else
  AC_MSG_RESULT(no)
  moot_WFLAGS=""
fi
AC_SUBST(moot_WFLAGS)


dnl
dnl output
dnl
AC_CONFIG_FILES(src/libmoot/Makefile src/programs/Makefile src/Makefile)
AC_CONFIG_FILES(doc/libmoot/mainpage.dox)
AC_CONFIG_FILES(doc/libmoot/libmoot.doxy doc/libmoot/Makefile)
AC_CONFIG_FILES(doc/programs/Makefile)
AC_CONFIG_FILES(doc/Makefile)
AC_CONFIG_FILES(config/Makefile)
AC_CONFIG_FILES(Makefile)
AC_CONFIG_FILES(moot.pc)
AC_CONFIG_FILES(moot.spec)
AC_OUTPUT
